<resources>
    <string name="app_name">Pay Back</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="all">All</string>
    <string name="balance">Balance:</string>
    <string name="title_activity_setup">Pay Back</string>
    <string name="welcome">Welcome to Pay Back!</string>
    <string name="list_empty_text">Once you add an entry, you\'ll see it listed here</string>
    <string name="even">We\'re even!</string>
    <string name="person_hint">Who?</string>
    <string name="they_owe">They owe</string>
    <string name="i_owe">I owe</string>
    <string name="amount">Amount</string>
    <string name="share">Share via</string>
    <string name="note">Note</string>
    <string name="paid_back_exclamation">Paid back!</string>
    <string name="paid_back">Paid back</string>
    <string name="checkbox">Checkbox!</string>
    <string name="create_fab_error">You need to enter a name and an amount</string>
    <string name="pay_back">Pay Back</string>
    <string name="add_payment">Payment</string>
    <string name="send">Send</string>
    <string name="about_title">About</string>
    <string name="filter">Filter</string>
    <string name="welcome_text">In this free version you are limited to 5 debts at a time and no cloud sync. An in app purchase is required to unlock the full version.</string>
    <string name="currency_text">Before we get started, enter the currency you wish to use. This can be changed later in settings.</string>
    <string name="welcome_continue">Continue</string>
    <string name="welcome_currency_hint">Currency (ex. $)</string>
    <string name="welcome_using_nfc">Using NFC</string>
    <string name="welcome_using_nfc_text">Bump two devices together to sync debt details. You can either sync an entire page or a specific debt.</string>
    <string name="welcome_got_it">Got it!</string>
    <string name="cash">Cash</string>
    <string name="manage_people">Manage people</string>
    <string name="undid">Undid!</string>
    <string name="undo_pay_back">Undo Pay Back</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="ioweyou">I owe you</string>
    <string name="iowedyou">I owed you</string>
    <string name="youoweme">You owe me</string>
    <string name="youowedme">You owed me</string>
    <string name="debt_incash">in cash</string>
    <string name="bytime">Latest</string>
    <string name="byamount">By amount</string>
    <string name="clear">Clear</string>
    <string name="justnow">Just now</string>
    <string name="done">Done</string>
    <string name="welcome_currency">Select your preferred currency</string>
    <string name="sort_az">Sort alphabetically</string>
    <string name="people_empty_text">No people added</string>
    <string name="select_person">Select a person</string>
    <string name="change_person">Change person</string>
    <string name="rename">Rename</string>
    <string name="merge_to">Merge to</string>
    <string name="merge">Merge</string>
    <string name="name">Name</string>
    <string name="delete_person_text">Delete person and all of their debts?</string>
    <string name="merge_confirm_text_format">Merge all entries from %1$s to %2$s?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="you">You</string>
    <string name="rate_title">Rate Pay Back!</string>
    <string name="rate_text">If you like our app, please take a moment to rate it on the Play Store!</string>
    <string name="ok">OK</string>
    <string name="rate_now">Rate now</string>
    <string name="rate_later">Maybe later</string>
    <string name="rate_never">No thanks</string>
    <string name="undo">Undo</string>
    <string name="sort_list">Sorted people</string>
    <string name="deleted_person">Deleted person</string>
    <string name="renamed_person">Renamed person</string>
    <string name="merged_people">Merged people</string>
    <string name="already_sorted">Already sorted</string>
    <string name="deleted_debt">Deleted entry</string>
    <string name="delete_entry">Delete debt</string>
    <string name="overwrite_nfc_title">Overwrite</string>
    <string name="overwrite_nfc_text">Are you sure you want to overwrite all entries from %1$s?</string>
    <string name="from_who_title">From who?</string>
    <string name="nfc_error_all">Can\'t send entries from \"All\"</string>
    <string name="title_activity_people_manager">People</string>
    <string name="upgrade_title">Unlock full version</string>
    <string name="upgrade_text">Purchase the full version of Pay Back to add more than 5 debts and sync them across devices.</string>
    <string name="upgrade_confirm_text">Upgrade</string>
    <string name="cloud_sync">Cloud sync</string>
    <string name="cloud_sync_description_first">Thanks for purchasing the full version of Pay Back! Activate cloud sync to sync debt data across devices using Google Drive. This can be enabled later in settings.</string>
    <string name="cloud_sync_description">Activate cloud sync to sync debt data across devices using Google Drive.</string>
    <string name="activate">Activate</string>
    <string name="not_now">Not now</string>
    <string name="not_full_version">Requires full version</string>
    <string name="upgrade_navigation_drawer">Unlock full version</string>
    <string name="debt_free">Debt free!</string>
    <string name="add_person">Add person</string>
    <string name="debt_single">debt</string>
    <string name="debt_plural">debts</string>
    <string name="people">people</string>
    <string name="person">person</string>
    <string name="cloud_sync_account">Sync account</string>
    <string name="wipe_data">Wipe app data</string>
    <string name="wipe_data_confirm_free">Are you sure you want to delete all app data?</string>
    <string name="wipe_data_confirm_full">Are you sure you want to delete all app data? This includes Google Drive save data. A backup with your current data will be created.</string>
    <string name="wipe">Wipe</string>
    <string name="phone_number">Phone number</string>
    <string name="swish_copy_toast_end">copied to clipboard</string>
    <string name="pay_with_swish">Pay with Swish</string>
    <string name="pay_with_paypal">Pay with PayPal</string>
    <string name="currency_checkbox">Symbol after amount</string>
    <string name="select_currency">Select currency</string>
    <string name="select">Select</string>
    <string name="change_currency">Change currency</string>
    <string name="currency_symbol">Currency symbol</string>
    <string name="currency_symbol_after_checkbox">Symbol after amount</string>
    <string name="currency_decimal_separator_checkbox">Comma decimal separator</string>
    <string name="thousand_separator">Thousand separator</string>
    <string name="save_fail">Failed to save file</string>
    <string name="no_file">No backup found</string>
    <string name="read_failed">Failed to read file</string>
    <string name="restore_success">Restore successful</string>
    <string name="disable_cloud_sync_title">Disable cloud sync</string>
    <string name="disable_cloud_sync_content">Are you sure you want to disable cloud sync? No data will be lost.</string>
    <string name="disable_cloud_sync_affirmative">Disable</string>
    <string name="backup_removed_success">Backup removed successfully</string>
    <string name="no_backup_available">No backup available</string>
    <string name="set_reminder">Set reminder</string>
    <string name="even_out">Even out</string>
    <string name="evened_out">Evened out</string>
    <string name="currency_show_trailing_zeros">Show trailing zeros</string>
    <string name="set_date">Set date</string>
    <string name="share_debt_summary">Share debt summary</string>
    <string name="paid_back_when">Paid back %1$s</string>
    <string name="autobackup">Auto backup</string>
    <string name="wipebackup">Wipe backup</string>
    <string name="backup">Backup</string>
    <string name="delete_failed">Delete failed</string>
    <string name="delete_successful">Delete successful</string>
    <string name="login_successful">Login successful!</string>
    <string name="reminder_detail">Reminder at %1$s %2$s</string>
    <string name="backup_success">Backup successful</string>
    <string name="backup_failed">Backup failed</string>
    <string name="number_format_error">Invalid number format</string>
    <string name="enable_storage_access">Enable storage access</string>
    <string name="enable_contact_access">Enable contact access</string>
    <string name="enable_storage_access_summary">Required for backups</string>
    <string name="unknown_person">Unknown person</string>
    <string name="paypal_email_or_phone_number_title">Select email or phone number</string>
    <string name="paypal_email_or_phone_number_hint">Email or phone number</string>
    <string name="pay">Pay</string>
    <string name="country_code_error">Phone number needs to contain country code (+XX)</string>
    <string name="lib_devdesign">Development and Design</string>
    <string name="author_johnsimon">John Rapp Farnes\nSimon Halvdansson</string>
    <string name="lib_icon">Icon</string>
    <string name="author_icon">Jovie Brett Bardoles</string>
    <string name="lib_riv">RoundedImageView</string>
    <string name="author_riv">Vince Mi</string>
    <string name="lib_gson">GSON</string>
    <string name="author_gson">Google</string>
    <string name="lib_pic">Picasso</string>
    <string name="author_pic">Square</string>
    <string name="lib_dsr">DragSortRecycler</string>
    <string name="author_dsr">Emile Belanger</string>
    <string name="lib_qr">QuickReturn</string>
    <string name="author_qr">Etienne Lawlor</string>
    <string name="lib_md">Material Dialogs</string>
    <string name="author_md">Aidan Follestad</string>
    <string name="lib_rbm">Android-RobotoTextView</string>
    <string name="author_rbm">Evgeny Shishkin</string>
    <string name="lib_iab">Android In-App Billing</string>
    <string name="author_iab">AnjLab</string>
    <string name="lib_bp">BetterPickers</string>
    <string name="author_bp">Derek Brameyer</string>
    <string name="pref_settings">Settings</string>
    <string name="pref_general">General</string>
    <string name="pref_data">Data</string>
    <string name="pref_sync">Sync</string>
    <string name="currency">Currency</string>
    <string name="background">Background</string>
    <string name="pref_cloud_sync">Sync data across devices</string>
    <string name="pref_backup_data">Backup data to storage</string>
    <string name="pref_manage_backups">Manage backups</string>
    <string name="pref_restore_data">Restore data from backup</string>
    <string name="pref_backup_last">Last backup %1$s</string>
    <string name="notif_pay_back_reminder">Pay Back Reminder</string>
    <string name="notif_remind_later">Remind later</string>
    <string name="notif_they_owe">%1$s owes you %2$s</string>
    <string name="notif_you_owe">You owe %1$s %2$s</string>
    <string name="debtsummary_headerformat">%1$s a total of %2$s</string>
    <string name="debtsummary_currentdebts">Current debts</string>
    <string name="debtsummary_partialdebts">Partially paid back debts</string>
    <string name="debtsummary_paidbackdebts">Paid back debts</string>
    <string name="debtsummary_history_header">History</string>
    <string name="debtsummary_history_entryformat">%1$s on %2$s</string>
    <string name="debtshare_fulldebtformat">full debt %1$s</string>
    <string name="debtshare_noteformat">for \"%1$s\"</string>
    <string name="debtshare_dateformat">since %1$s</string>
    <string name="debtshare_partialformat">paid back %1$s on %2$s</string>
    <string name="debtshare_paidbackformat">\"paid back on %1$s</string>
</resources>