<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context="se.jrp.deptapp.FeedActivity">

    <item
        android:id="@+id/menu_filter"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_filter"
        android:title="@string/filter"  >

        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/menu_filter_time"
                    android:title="@string/bytime"
                    android:checked="true"/>
                <item
                    android:id="@+id/menu_filter_amount"
                    android:title="@string/byamount"/>
            </group>
        </menu>

    </item>

</menu>
