<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"  >

    <com.johnsimon.payback.util.RobotoMediumTextView
        android:text="@string/select_person"
        android:id="@+id/person_picker_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#474747"
        android:textSize="22sp"
        android:padding="8dp"/>

    <AutoCompleteTextView
        style="@style/Widget.AppCompat.EditText"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textCapWords"
        android:id="@+id/select_person_actv"
        android:textColorHint="@color/gray_text_very_light"
        android:textColor="@color/gray_text_light"
        android:layout_width="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:paddingTop="8dp"
        android:orientation="horizontal">

        <Button
            android:textAllCaps="true"
            android:text="@string/cancel"
            android:id="@+id/dialog_select_person_cancel"
            android:layout_width="88dp"
            android:layout_height="36dp"
            android:background="?android:attr/selectableItemBackground"
            android:textSize="14sp"
            android:textColor="@color/green_strong"/>

        <Button
            android:textAllCaps="true"
            android:text="@string/ok"
            android:id="@+id/dialog_select_person_confirm"
            android:layout_width="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_height="36dp"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/green_strong"
            android:textSize="14sp"/>
    </LinearLayout>

</LinearLayout>