<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <com.devspark.robototextview.widget.RobotoTextView
        app:fontFamily="roboto"
        app:textWeight="medium"
        android:text="@string/rate_title"
        android:id="@+id/request_rate_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#474747"
        android:textSize="22sp"
        android:padding="8dp"   />

    <com.devspark.robototextview.widget.RobotoTextView
        app:fontFamily="roboto"
        app:textWeight="medium"
        android:id="@+id/select_person_actv"
        android:text="@string/rate_text"
        android:textColor="@color/gray_text_light"
        android:layout_width="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:paddingTop="8dp"
        android:orientation="vertical">

        <com.devspark.robototextview.widget.RobotoButton
            app:fontFamily="roboto"
            app:textWeight="medium"
            android:layout_gravity="right"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:gravity="right|center_vertical"
            android:textAllCaps="true"
            android:text="@string/rate_now"
            android:id="@+id/request_rate_dialog_rate"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/green_strong"
            android:textSize="16sp"/>

        <com.devspark.robototextview.widget.RobotoButton
            app:fontFamily="roboto"
            app:textWeight="medium"
            android:layout_gravity="right"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textColor="@color/green"
            android:gravity="right|center_vertical"
            android:textAllCaps="true"
            android:text="@string/rate_later"
            android:id="@+id/request_rate_dialog_later"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:background="?android:attr/selectableItemBackground"
            android:textSize="14sp"/>

        <com.devspark.robototextview.widget.RobotoButton
            app:fontFamily="roboto"
            app:textWeight="medium"
            android:layout_gravity="right"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textColor="@color/green"
            android:gravity="right|center_vertical"
            android:textAllCaps="true"
            android:text="@string/rate_never"
            android:id="@+id/request_rate_dialog_never"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:background="?android:attr/selectableItemBackground"
            android:textSize="14sp"/>

    </LinearLayout>

</LinearLayout>