<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"  >

    <com.johnsimon.payback.util.RobotoMediumTextView
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/gray_text_light"
        android:layout_width="wrap_content"
        android:text="@string/upgrade_text"
        android:textSize="18sp"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:paddingTop="8dp"
        android:orientation="horizontal">

        <Button
            android:textAllCaps="true"
            android:text="@string/cancel"
            android:id="@+id/upgrade_cancel"
            android:layout_width="88dp"
            android:layout_height="36dp"
            android:background="?android:attr/selectableItemBackground"
            android:textSize="14sp"
            android:textColor="@color/green_strong"/>

        <Button
            android:textAllCaps="true"
            android:text="@string/upgrade_confirm_text"
            android:id="@+id/upgrade_button"
            android:layout_width="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_height="36dp"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/green_strong"
            android:textSize="14sp"/>
    </LinearLayout>

</LinearLayout>