<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.devspark.robototextview.widget.RobotoTextView
            app:fontFamily="roboto"
            app:textWeight="medium"
            android:textColor="#ffffff"
            android:text="20 Kr (SEK)"
            android:background="@color/green"
            android:id="@+id/welcome_currency_preview"
            android:textSize="28sp"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"    />

        <TextView
            android:paddingBottom="8dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="16dp"
            android:textColor="@color/gray_text_light"
            android:textSize="18sp"
            android:text="@string/currency_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.devspark.robototextview.widget.RobotoButton
                app:fontFamily="roboto"
                app:textWeight="medium"
                style="@style/Elevation2DP"
                android:text="@string/currency"
                android:id="@+id/welcome_select_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.devspark.robototextview.widget.RobotoButton
                app:fontFamily="roboto"
                app:textWeight="medium"
                style="@style/Elevation2DP"
                android:text="@string/currency_symbol"
                android:id="@+id/welcome_select_currency_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <android.support.v7.internal.widget.TintCheckBox
            app:theme="@style/ThemeOverlay.AppCompat.Light"
            android:id="@+id/custom_currency_check_after"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"
            android:text="@string/currency_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.devspark.robototextview.widget.RobotoButton
            app:fontFamily="roboto"
            app:textWeight="medium"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_gravity="end"
            android:textAllCaps="true"
            android:text="@string/welcome_continue"
            android:id="@+id/welcome_continue"
            android:layout_width="94dp"
            android:layout_height="42dp"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/green_strong"
            android:clickable="false"
            android:textSize="16sp"/>

    </LinearLayout>
</ScrollView>