<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <com.devspark.robototextview.widget.RobotoTextView
        app:fontFamily="roboto"
        app:textWeight="medium"
        android:text="@string/from_who_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#474747"
        android:textSize="22sp"
        android:padding="8dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            style="@style/Widget.AppCompat.EditText"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textCapWords"
            android:id="@+id/from_who_actv"
            android:textColorHint="@color/gray_text_very_light"
            android:textColor="@color/gray_text_light"
            android:layout_width="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textSize="18sp" />
        
        <ImageButton
            android:layout_marginRight="8dp"
            android:id="@+id/from_who_clear"
            android:layout_gravity="right"
            android:src="@drawable/ic_clear_dark"
            style="@style/RippleBackground"
            android:layout_width="36dp"
            android:layout_height="36dp"/>

    </FrameLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:paddingTop="8dp"
        android:orientation="horizontal">

        <com.devspark.robototextview.widget.RobotoButton
            app:fontFamily="roboto"
            app:textWeight="medium"
            android:textAllCaps="true"
            android:text="@string/cancel"
            android:id="@+id/from_who_dialog_cancel"
            android:layout_width="88dp"
            android:layout_height="36dp"
            android:background="?android:attr/selectableItemBackground"
            android:textSize="14sp"
            android:textColor="@color/green_strong"/>

        <com.devspark.robototextview.widget.RobotoButton
            app:fontFamily="roboto"
            app:textWeight="medium"
            android:textAllCaps="true"
            android:text="@string/ok"
            android:id="@+id/from_who_dialog_confirm"
            android:layout_width="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_height="36dp"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/green_strong"
            android:textSize="14sp"/>
    </LinearLayout>

</LinearLayout>