<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:paddingTop="32dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/mockup_flat_nfc"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <com.devspark.robototextview.widget.RobotoTextView
            app:fontFamily="roboto"
            app:textWeight="medium"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/welcome_using_nfc"
            android:textSize="26sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:textColor="@color/gray_text_light"
            android:textSize="17sp"
            android:text="@string/welcome_using_nfc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.devspark.robototextview.widget.RobotoButton
            app:fontFamily="roboto"
            app:textWeight="medium"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_gravity="end"
            android:textAllCaps="true"
            android:text="@string/welcome_got_it"
            android:id="@+id/welcome_got_it"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/green_strong"
            android:textSize="17sp"/>

    </LinearLayout>

</ScrollView>